0.4
---

Outstanding!
 * Project moved to GitLab, good-bye GitHub.
 * CI is now handled by GitLab, good-bye Shippable.
 * Build system switched to Meson, good-bye Autotools.

Fixes
 * Desktop file: exec now accepts url (thx Elías Alejandro Año Mendoza)



0.3.7 (2018-05-08) - Marilou Reggae (Gainsbourg Cover) / Alain Bashung
----------------------------------------------------------------------

General
 * Update default station list.

Fixes
 * Fix notification crash on Cinnamon. #79

Translations
 * Updated translations: Czech, French, German, Norwegian.



0.3.6 (2018-03-31) - Birthmark / Deftones
-----------------------------------------

General
 * Add support for dark theme. #59

Fixes
 * Fix ``<Play/Pause>`` multimedia key. #83

Documentation
 * A new documentation is available at <https://goodvibes.readthedocs.io>.
 * Remove the GitHub wiki.

Translations
 * Updated translations: Dutch, French, Norwegian.



0.3.5 (2018-03-10) - No Ordinary Love (Sade Cover) / Deftones
-------------------------------------------------------------

Fixes
 * Ensure ``<Space>`` is a shortcut to toggle playback. #80
 * Retry playback on error, hence resume playback after suspend. This is
   just a first attempt, error handling needs more care than that. #72
 * Fixes here and there in translatable strings (thx Allan Nordhøy).

Translations
 * Updated translations: French, German, Norwegian.



0.3.4 (2018-01-27) - God in Hell / Khynn
----------------------------------------

General
 * New icon set at last! Thanks to Hector Lahminewski and his endless
   patience - the icons have been waiting for almost a year. #51
 * There's now a script to launch Goodvibes from the source tree - talking
   to developers here, users don't care. #55

Translations
 * Updated translations: Dutch, French.
 * Update pot file (I forgot that for a while). #49
 * Document translation process. #50



0.3.3 (2018-01-07) - Psygnosis is Shit / Psygnosis
--------------------------------------------------
